<resources>
    <string name="app_name">CityConnect</string>
    <string name="title_catalog">Catálogo</string>
    <string name="title_cart">Carrinho</string>
    <string name="title_deliveries">Encomendas</string>
    <string name="title_profile">Perfil</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoicm9kcmlnb3Jvc21hbmluaG8iLCJhIjoiY2l5dzBma3J5MDBnOTJ3cWhzc3BvcmttaSJ9.5vjwohHSYhqysTL0VH2ewQ</string>
    <string name="api_url">http://cityconnect.zapto.org</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="login_failed">"A combinação email/password não existe"</string>
</resources>
