...
            app:singleSelection="false">


        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/store_list"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
