...
        app:layout_constraintEnd_toStartOf="@+id/item_price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/item_add"
        android:layout_width="27dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="false"
        android:background="@drawable/cart_96"
...
